--- a/src/app/poll/mobile-poll-table.component.html
+++ b/src/app/poll/mobile-poll-table.component.html
@@ -30,13 +30,15 @@
       <!-- text input for entering/editing the participant name -->
       <label class="sr-only" for="name-add">{{ 'participant.name' | translate }}</label>
       <input [ngClass]="{'has-error': formHelper.getParticipantFormName().invalid
-                  && (formHelper.getParticipantFormName().dirty || formHelper.getParticipantFormName().touched)}" class="form-control name-add" formControlName="name" id="name-add"
+                  && (formHelper.getParticipantFormName().dirty || formHelper.getParticipantFormName().touched)}"
+             class="form-control name-add" formControlName="name" id="name-add"
              type="text">
 
     </div>
     <div class="col-auto px-1">
       <!-- button to delete the currently edited participant -->
-      <button (click)="formHelper.deleteEditParticipant(getSelectedParticipant())" class="btn btn-transparent p-0 border-0"
+      <button (click)="formHelper.deleteEditParticipant(getSelectedParticipant())"
+              class="btn btn-transparent p-0 border-0"
               type="button">
         <img alt="trashcan" class="icon icon-delete" src="assets/trash.svg"/>
       </button>
