feat: update snapshot to v2.2.0
feat: add oss-links as marks to footer
fix: add reactive language tag in html

--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -12,6 +12,28 @@
     und dem <a href="https://schleswig-holstein.de" target="_blank">Land Schleswig-Holstein</a>
   </div>
 
+  <div id="oss-code">
+    <a
+      data-toggle="tooltip"
+      href="https://github.com/Dataport"
+      target="_blank"
+      title="Github">
+      <img
+        alt="github.com"
+        src="assets/github-mark.svg">
+    </a>
+    <a
+      data-toggle="tooltip"
+      href="https://gitlab.opencode.de/dataport/terminfinder"
+      target="_blank"
+      title="OpenCoDE">
+      <img
+        alt="opencode.de"
+        src="assets/opencode_signet.svg"
+      >
+    </a>
+  </div>
+
   <div id="links">
     <a data-cy="imprintLink" routerLink="/imprint">{{ 'imprint.imprint' | translate }}</a>
     <a data-cy="accessibilityLink" routerLink="/accessibility">{{ 'accessibility.accessibility' | translate }}</a>
