--- a/src/index.html.tmpl
+++ b/src/index.html.tmpl
@@ -1,6 +1,6 @@
 <!-- @GENERATED_COMMENT_TS@ -->
 <!doctype html>
-<html lang="en">
+<html lang="de">
 <head>
   <meta charset="utf-8">
   <meta content="IE=edge" http-equiv="X-UA-Compatible"/>
