--- a/src/app/shared/components/footer/footer.component.scss
+++ b/src/app/shared/components/footer/footer.component.scss
@@ -52,6 +52,27 @@
   }
 }
 
+#oss-code {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  padding: 0 4px 0 4px;
+  margin-bottom: 8px;
+
+  a {
+    padding: 4px;
+
+    img {
+      width: 24px;
+      @include media-breakpoint-up(lg) {
+        width: 32px;
+      }
+    }
+  }
+}
+
 #links {
   margin-top: 1em;
   display: contents;
