--- a/src/environments/environment.ts.tmpl
+++ b/src/environments/environment.ts.tmpl
@@ -15,6 +15,7 @@ locale: @LOCALE@,
 addressing: @ADDRESSING@,
 apiBaseUrl: @API_URL@,
 email: @EMAIL@,
+showReference: @SHOW_REFERENCE@,
 customerId: @CUSTOMER_ID@,
 imprint: @IMPRINT@,
 privacy: @PRIVACY@,
