--- a/src/app/shared/components/footer/footer.component.html
+++ b/src/app/shared/components/footer/footer.component.html
@@ -8,8 +8,9 @@
   </div>
 
   <div *ngIf="showReference" id="reference">
-    Ein Angebot von <a href="https://dataport.de" target="_blank">Dataport</a>
-    und dem <a href="https://schleswig-holstein.de" target="_blank">Land Schleswig-Holstein</a>
+    {{ 'footer.reference_0' | translate }} <a href="https://dataport.de" target="_blank">Dataport</a>
+    {{ 'footer.reference_1' | translate }}
+    <a href="https://schleswig-holstein.de" target="_blank">{{ 'footer.sh' | translate }}</a>
   </div>
 
   <div id="oss-code">
