--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -14,7 +14,11 @@
       <div class="col">
         <div class="section-container">
           <div class="pt-2 px-4">
-            <app-appointment-summary *ngIf="model" [appointment]="model"></app-appointment-summary>
+            <app-appointment-summary
+              *ngIf="model"
+              [appointment]="model"
+              [showAppointmentUrl]="true"
+            ></app-appointment-summary>
           </div>
           <div class="row">
             <div class="col">
