fix: add deletion info to summaries

--- a/src/app/admin-dashboard/admin-dashboard.component.html
+++ b/src/app/admin-dashboard/admin-dashboard.component.html
@@ -18,6 +18,7 @@
               *ngIf="model"
               [appointment]="model"
               [showAppointmentUrl]="true"
+              [showDeleteWarning]="true"
             ></app-appointment-summary>
           </div>
           <div class="row">
