--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -15,7 +15,7 @@
       <div class="col">
         <div class="section-container">
           <div class="p-3">
-            <app-appointment-summary [appointment]="model"></app-appointment-summary>
+            <app-appointment-summary [appointment]="model" [showDeleteWarning]="true"></app-appointment-summary>
           </div>
           <div class="row">
             <div class="col">
