--- a/src/app/shared/components/appointment-summary/appointment-summary.component.html
+++ b/src/app/shared/components/appointment-summary/appointment-summary.component.html
@@ -1,15 +1,15 @@
 <div *ngIf="showAppointmentUrl && absoluteAppointmentUrl" class="row no-gutters mb-3">
   <div class="col-auto align-self-center mr-2">
-    <img alt="url" class="icon" src="assets/calendar_grey.svg"/>
+    <img alt="url" aria-hidden="true" class="icon" src="assets/calendar_grey.svg"/>
   </div>
   <div class="col align-self-top">
-    <div class="header" data-id="overviewUrlLabel">{{ 'poll.details.url.url' | translate }}</div>
-    <div class="value" data-id="overviewUrlValue" id="url">
+    <div class="header" data-cy="overviewUrlLabel">{{ 'poll.details.url.url' | translate }}</div>
+    <div class="value" data-cy="overviewUrlValue" id="url">
       <a [href]="absoluteAppointmentUrl" target="_blank">{{absoluteAppointmentUrl}}</a>
       <button
         [cbContent]="absoluteAppointmentUrl"
         class="btn btn-transparent m-0 p-0"
-        data-id="inviteLinkCopy"
+        data-cy="inviteLinkCopy"
         ngbTooltip="{{ 'links.copy' | translate }}"
         ngxClipboard
         type="button"
@@ -21,39 +21,39 @@
 </div>
 <div *ngIf="showUsername && appointment.name" class="row no-gutters mb-3">
   <div class="col-auto align-self-center mr-2">
-    <img alt="user" class="icon" src="assets/user.svg"/>
+    <img alt="user" aria-hidden="true" class="icon" src="assets/user.svg"/>
   </div>
   <div class="col align-self-top">
-    <div class="header" data-id="overviewNameLabel">{{ 'poll.details.name.name' | translate }}</div>
-    <div class="value" data-id="overviewNameValue" id="name">{{appointment.name}}</div>
+    <div class="header" data-cy="overviewNameLabel">{{ 'poll.details.name.name' | translate }}</div>
+    <div class="value" data-cy="overviewNameValue" id="name">{{appointment.name}}</div>
   </div>
 </div>
 <div *ngIf="appointment.title" class="row no-gutters mb-3">
   <div class="col-auto align-self-center mr-2">
-    <img alt="title" class="icon" src="assets/title.svg"/>
+    <img alt="title" aria-hidden="true" class="icon" src="assets/title.svg"/>
   </div>
   <div class="col align-self-top">
-    <div class="header" data-id="overviewTitleLabel">{{ 'poll.title.title' | translate }}</div>
-    <div class="value" data-id="overviewTitleValue" id="title">{{appointment.title}}</div>
+    <div class="header" data-cy="overviewTitleLabel">{{ 'poll.title.title' | translate }}</div>
+    <div class="value" data-cy="overviewTitleValue" id="title">{{appointment.title}}</div>
   </div>
 </div>
 <div *ngIf="appointment.location" class="row no-gutters mb-3">
   <div class="col-auto align-self-center mr-2">
-    <img alt="location" class="icon" src="assets/location.svg"/>
+    <img alt="location" aria-hidden="true" class="icon" src="assets/location.svg"/>
   </div>
   <div class="col align-self-top">
-    <div class="header" data-id="overviewPlaceLabel">{{ 'poll.details.place.place' | translate }}</div>
-    <div class="value" data-id="overviewPlaceValue" id="location">{{appointment.location}}</div>
+    <div class="header" data-cy="overviewPlaceLabel">{{ 'poll.details.place.place' | translate }}</div>
+    <div class="value" data-cy="overviewPlaceValue" id="location">{{appointment.location}}</div>
   </div>
 </div>
 <div *ngIf="appointment.description" class="row no-gutters mb-3">
   <div class="col-auto align-self-center mr-2">
-    <img alt="description" class="icon" src="assets/description.svg"/>
+    <img alt="description" aria-hidden="true" class="icon" src="assets/description.svg"/>
   </div>
   <div class="col align-self-top">
     <div class="header"
-         data-id="overviewDescriptionLabel">{{ 'poll.details.description.description' | translate }}</div>
-    <div data-id="overviewDescriptionValue" id="descriptionContainer">
+         data-cy="overviewDescriptionLabel">{{ 'poll.details.description.description' | translate }}</div>
+    <div data-cy="overviewDescriptionValue" id="descriptionContainer">
       <div #description [innerHTML]="getDescription()" class="collapse value" id="description"></div>
       <a
         [hidden]="!moreButtonRequired"
@@ -65,5 +65,15 @@
         href="#description"
       ></a>
     </div>
+  </div>
+</div>
+<div *ngIf="showDeleteWarning" class="row no-gutters mb-3">
+  <div class="col-auto align-self-center mr-2">
+    <img alt="delete" aria-hidden="true" class="icon" src="assets/delete_gray.svg"/>
+  </div>
+  <div class="col align-self-top">
+    <div class="header" data-cy="overviewDeleteLabel">{{ 'poll.details.delete.deleteDate' | translate }}</div>
+    <div class="value" data-cy="overviewDeleteValue"
+         id="delete">{{ 'poll.details.delete.willBeDeleted' | translate }}</div>
   </div>
 </div>
