--- a/src/app/links/links.component.scss
+++ b/src/app/links/links.component.scss
@@ -1,5 +1,5 @@
 @import "src/default";
-@import '~bootstrap/scss/mixins';
+@import 'bootstrap/scss/mixins';
 
 $icon-width: 30px;
 $icon-height: 30px;
