--- a/src/app/password/password.component.scss
+++ b/src/app/password/password.component.scss
@@ -1,5 +1,5 @@
 @import "src/default";
-@import '~bootstrap/scss/mixins';
+@import 'bootstrap/scss/mixins';
 
 .form-control {
   font-size: $font-size-medium-mobile;
