--- a/src/app/juristic/terms-of-service/terms-of-service.component.scss
+++ b/src/app/juristic/terms-of-service/terms-of-service.component.scss
@@ -1,5 +1,5 @@
 @import "src/default";
-@import '~bootstrap/scss/mixins';
+@import 'bootstrap/scss/mixins';
 
 content {
   font-size: $font-size-small-mobile;
