--- a/src/app/shared/components/suggested-date/suggested-date.component.scss
+++ b/src/app/shared/components/suggested-date/suggested-date.component.scss
@@ -1,5 +1,5 @@
 @import "src/default";
-@import '~bootstrap/scss/mixins';
+@import 'bootstrap/scss/mixins';
 
 div {
   font-weight: $font-weight-light;
