fix: change ui after updating ng-bootstrap

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -31,12 +31,12 @@
   >
     Wichtige Bestandteile der Seite konnten nicht geladen werden. Bitte laden Sie die Seite neu!
   </ngb-toast>
-  <div class="row justify-content-center" id="main">
+  <div class="justify-content-center" id="main">
     <div class="col-12 py-4">
       <router-outlet></router-outlet>
     </div>
   </div>
-  <div class="row d-none d-lg-block" id="bottom-edge"></div>
+  <div class="row d-none d-lg-block m-0" id="bottom-edge"></div>
   <div class="row justify-content-center">
     <div class="col-12 py-2">
       <app-footer></app-footer>
