--- a/src/app/overview/overview.component.html
+++ b/src/app/overview/overview.component.html
@@ -13,7 +13,7 @@
   <div class="col">
     <div class="row">
       <div class="col">
-        <div class="section-container">
+        <div class="section-container mx-3">
           <div class="p-3">
             <app-appointment-summary [appointment]="model" [showDeleteWarning]="true"></app-appointment-summary>
           </div>
