--- a/src/app/password/password.component.html
+++ b/src/app/password/password.component.html
@@ -26,7 +26,7 @@
         </label>
       </div>
     </div>
-    <div class="form-row justify-content-center mt-3">
+    <div class="d-flex form-row justify-content-center mt-3">
       <div class="col col-lg-8">
         <input
           aria-hidden="true"
@@ -60,8 +60,8 @@
         </div>
       </div>
     </div>
-    <div class="form-row justify-content-center mt-3">
-      <div class="col col-lg-8 d-block pt-3">
+    <div class="d-flex form-row justify-content-center mt-3">
+      <div class="col col-lg-8 pt-3">
         <button
           *ngIf="!isAdmin"
           [disabled]="passwordForm.invalid"
