--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -14,7 +14,7 @@
   {{notification.message}}
 </div>
 <form *ngIf="formHelper" [formGroup]="formHelper.pollForm">
-  <div class="row">
+  <div class="row mx-3">
     <div class="col">
       <div *ngIf="model" class="section-container">
         <div class="pt-2 px-3">
@@ -33,7 +33,7 @@
         <app-mobile-poll-table></app-mobile-poll-table>
 
         <!-- desktop table -->
-        <table class="table table-striped table-hover mb-0 table-bordered poll-table d-none d-lg-block">
+        <table aria-hidden="true" class="table table-striped table-hover mb-0 bordered poll-table d-none d-lg-block">
           <!-- first row contains the suggested dates -->
           <thead class="h-100" data-id="tableHead">
           <tr class="h-100">
@@ -75,7 +75,7 @@
           <!-- summary row -->
           <tr class="poll-summary-row">
             <td class="total-participants">
-              <div class="row no-gutters align-items-center">
+              <div class="row no-gutters align-items-center justify-content-between mx-2">
                 <!-- total participants -->
                 <div class="col-7 ml-3 font-small text-bold participant-summary" data-id="participantSummary">
                   {{formHelper.getNumberOfParticipants()}} {{ 'participant.participants' | translate }}
@@ -84,7 +84,7 @@
                 <div *ngIf="!formHelper.hasAddOrEditParticipantForm() && !isAppointmentPaused" class="col-4">
                   <button
                     (click)="formHelper.addParticipant()"
-                    class="btn btn-round btn-secondary btn-add-participant float-right"
+                    class="btn btn-round btn-secondary btn-add-participant float-end"
                     data-id="addParticipantButton"
                     data-placement="top"
                     data-toggle="tooltip"
@@ -195,11 +195,11 @@
             <ng-container *ngIf="!formHelper.isEditInParticipantForm(participant.participantId)">
               <td class="pl-3 align-middle">
                 <!-- name -->
-                <span class="ml-3 mt-1 float-left text-bold">{{participant.name}}</span>
+                <span class="ml-3 mt-1 float-start text-bold">{{ participant.name }}</span>
                 <!-- button to edit the participant -->
                 <span
                   *ngIf="!formHelper.hasAddParticipantForm() && !formHelper.hasEditParticipantForm() && !isAppointmentPaused"
-                  class="float-right"
+                  class="float-end"
                 >
                   <button
                     (click)="formHelper.editParticipant(participant)"
@@ -309,7 +309,7 @@
     </div>
   </div>
 
-  <div *ngIf="surveyLinkUser" class="row">
+  <div *ngIf="surveyLinkUser" class="row mx-3">
     <div class="col">
       <div class="section-container">
         <div class="pt-3 pb-4 px-3">
@@ -330,7 +330,7 @@
     </div>
   </div>
 
-  <div *ngIf="model && !isAppointmentPaused">
+  <div *ngIf="model && !isAppointmentPaused" class="row mx-3">
     <app-tos [tosFormGroup]="formHelper.pollForm"></app-tos>
     <div
       *ngIf="formHelper.hasParticipantVotings() && !formHelper.hasParticipantAcceptedOrQuestionableVotings(); else showSendButton"
