--- a/src/app/shared/components/poll-options/poll-options.component.html
+++ b/src/app/shared/components/poll-options/poll-options.component.html
@@ -4,7 +4,7 @@
   class="row no-gutters justify-content-end justify-content-lg-around align-items-center align-self-center max-content"
 >
   <div class="col col-sm-auto">
-    <div class="row no-gutters justify-content-center">
+    <div class="row no-gutters justify-content-center min-content">
       <div class="col-auto">
         <label
           class="form-check-label"
@@ -31,7 +31,7 @@
     </div>
   </div>
   <div class="col col-sm-auto">
-    <div class="row no-gutters justify-content-center">
+    <div class="row no-gutters justify-content-center min-content">
       <div class="col-auto">
         <label
           class="w-100 form-check-label"
@@ -60,7 +60,7 @@
     </div>
   </div>
   <div class="col col-sm-auto">
-    <div class="row no-gutters justify-content-center">
+    <div class="row no-gutters justify-content-center min-content">
       <div class="col-auto">
         <label
           class="form-check-label"
