--- a/src/default.scss
+++ b/src/default.scss
@@ -75,6 +75,13 @@ $grid-breakpoints: (
   xl: 1200px
 ) !default;
 
+$container-max-widths: (
+  sm: 540px,
+  md: 720px,
+  lg: 960px,
+  xl: 1140px
+) !default;
+
 @mixin btn-disabled {
   opacity: 1;
   background-color: #a4adb6 !important;
