--- a/src/app/shared/components/tos/tos.component.html
+++ b/src/app/shared/components/tos/tos.component.html
@@ -13,7 +13,7 @@
       <div class="row align-items-center justify-content-center">
         <label class="checkbox align-self-center align-middle">
           <input [formControl]="isTosRead" id="tos" type="checkbox" value="">
-          <span class="checkbox-box" data-id="tosCheckbox">
+          <span class="checkbox-box" data-id="tosCheckbox" data-testid="tosCheckbox">
             <i class="checkbox-icon fa fa-check"></i>
           </span>
         </label>
