--- a/src/app/shared/components/suggested-date/suggested-date.component.html
+++ b/src/app/shared/components/suggested-date/suggested-date.component.html
@@ -1,4 +1,4 @@
-<div class="row no-gutters justify-content-lg-center text-center suggested-date-container">
+<div class="row no-gutters justify-content-center text-center suggested-date-container">
   <!-- column on the left or centered with start date and - for desktop resolutions - start and end time  -->
   <div class="col-5 column">
     <!-- start date -->
