fix(DAB-326): revert removal of placeholder

--- a/src/app/create-suggested-dates/create-suggested-dates.component.html
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.html
@@ -68,6 +68,7 @@
                     formControlName="startDate"
                     id="suggested-date-start-date-{{i}}"
                     ngbDatepicker
+                    placeholder="{{ 'date.placeholder' | translate }}"
                   >
                 </div>
               </ng-template>
