refactor(invalidDate): rename localization key for invalid end date

--- a/src/app/create-suggested-dates/create-suggested-dates.component.html
+++ b/src/app/create-suggested-dates/create-suggested-dates.component.html
@@ -178,7 +178,7 @@
                   && !!getEndDateOfSuggestedStartDateByIndex(i).errors?.invalidDate"
                 class="invalid-message"
               >
-                {{ 'date.setEnd' | translate }}
+                {{ 'date.endInvalid' | translate }}
               </div>
             </div>
           </div>
